fix: header overlapped and added about section, in progress

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -37,7 +37,7 @@
     &__container {
       display: grid;
       grid-template-columns: 160px 1fr;
-      padding: 0.5rem 1rem 1.5rem 1rem;
+      padding: 0.5rem 1rem 0rem 1rem;
       max-height: 4.5rem;
     }
   }
